[project]
authors = [
    {name = "Jani Sourander", email = "sourander@gmail.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "mkdocs-material<10.0.0,>=9.1.18",
    "mkdocs-awesome-pages-plugin<3.0.0,>=2.9.1",
]
name = "tietoliikenneohjelmointi"
version = "0.1.0"
description = ""
readme = "README.md"
